crates/panache-parser/tests/snapshots/yaml__yaml_suite_GH63.snap
---
source: crates/panache-parser/tests/yaml.rs
assertion_line: 245
expression: snapshot
---
case_id: GH63
input: "? a\n: 1.3\nfifteen: d\n"
has_error_contract: false
parsed_mapping_tree: true
diagnostics: []
