crates/panache-parser/tests/snapshots/yaml__yaml_suite_GT5M.snap
---
source: crates/panache-parser/tests/yaml.rs
assertion_line: 250
expression: snapshot
---
case_id: GT5M
input: "- item1\n&node\n- item2\n"
has_error_contract: true
parsed_mapping_tree: false
diagnostics: [YAML_PARSE_INVALID_KEY_TOKEN:stray content following a block sequence item at its indent level@8..13]
