crates/panache-parser/tests/snapshots/yaml__yaml_suite_H2RW.snap
---
source: crates/panache-parser/tests/yaml.rs
assertion_line: 246
expression: snapshot
---
case_id: H2RW
input: "foo: 1\n\nbar: 2\n    \ntext: |\n  a\n    \n  b\n\n  c\n \n  d\n"
has_error_contract: false
parsed_mapping_tree: true
diagnostics: []
