crates/panache-parser/tests/snapshots/yaml__yaml_suite_H3Z8.snap
---
source: crates/panache-parser/tests/yaml.rs
expression: snapshot
---
case_id: H3Z8
input: "---\nwanted: love ♥ and peace ☮\n"
has_error_contract: false
parsed_mapping_tree: true
diagnostics: []
