crates/panache-parser/tests/snapshots/yaml__yaml_suite_H7J7.snap
---
source: crates/panache-parser/tests/yaml.rs
expression: snapshot
---
case_id: H7J7
input: "key: &x\n!!map\n  a: b\n"
has_error_contract: true
parsed_mapping_tree: false
diagnostics: [YAML_LEX_REQUIRED_SIMPLE_KEY_NOT_FOUND:could not find expected ':' for required simple key@8..8]
