crates/panache-parser/tests/snapshots/yaml__yaml_suite_HS5T.snap
---
source: crates/panache-parser/tests/yaml.rs
assertion_line: 246
expression: snapshot
---
case_id: HS5T
input: "1st non-empty\n\n 2nd non-empty \n\t3rd non-empty\n"
has_error_contract: false
parsed_mapping_tree: true
diagnostics: []
