crates/panache-parser/tests/snapshots/yaml__yaml_suite_HU3P.snap
---
source: crates/panache-parser/tests/yaml.rs
expression: snapshot
---
case_id: HU3P
input: "key:\n  word1 word2\n  no: key\n"
has_error_contract: true
parsed_mapping_tree: false
diagnostics: [YAML_LEX_ERROR:invalid plain mapping line@0..4]
